--- a/style.css
+++ b/style.css
@@ -4,12 +4,17 @@
     padding: 0;
 }
 
-/* ##### SCHELETRO ##### */
+body{
+    font-family: ;
+}
+
 
 .conteinerMain{
     display: flex;
     width: 100vw;
 }
+
+/* ##### CONTEINER LEFT ##### */
 
 .conteinerLeft{
     width: 30%;
@@ -18,7 +23,6 @@
     position: relative;
 }
 
-/*conteinerleft */
 
     .logo{
         width: 100%;
@@ -50,33 +54,36 @@
         bottom: 0;
     }
 
+/* ##### CONTEINER RIGHT ##### */
+
 .conteinerRight{
     width: 70%;
     min-height: 1000px;
     background-color: navy;
 }
 
-/* conteinerRight */
 
-header{
-    width: 100%;
-    height: 90px;
-    background-color: salmon;
-    border: 1px solid white; 
-}
+    header{
+        width: 100%;
+        height: 90px;
+        background-color: salmon;
+        border: 1px solid white; 
+    }
 
-nav{
-    width: 100%;
-    min-height: 120px;
-    background-color: salmon;
-    border: 1px solid white;
-}
+    nav{
+        width: 100%;
+        min-height: 120px;
+        background-color: salmon;
+        border: 1px solid white;
+    }
 
-main{
-    width: 100%;
-    height: 100%;
-    border: 1px solid white;
-}
+    main{
+        width: 100%;
+        height: 100%;
+        border: 1px solid white;
+    }
+
+/* ##### FOOTER ##### */
 
 footer{
     width: 100%;
