--- a/style.css
+++ b/style.css
@@ -403,6 +403,7 @@ footer{
     display: flex;
     align-items: center;
     color: white;
+    padding: 10px;
 }
 
 .songImg{
@@ -474,12 +475,61 @@ footer{
     border: 1px solid white;
     display: flex;
     color: white;
+    padding: 1rem;
+}
+
+.startTime{
+    display: flex;
+    align-items: center;
 }
 
 .lineTime{
     width: 80%;
+    padding: 0 0.5rem;
+}
+
+.lineGrey{
+    white-space: 90%;
+    height: 7px;
+    background-color: grey;
+    border-radius: 1rem;
 }
 
 .footerRight > .fa-solid{
     padding: 0.3rem;
 }
+
+.lineWhite{
+    width: 20%;
+    height: 7px;
+    background-color: white;
+    border-radius: 1rem;
+    position: relative;
+    bottom: 0.4rem;
+}
+
+.optionAudio{
+    width: 40%;
+}
+
+.audio{
+    width: 60%;
+}
+
+.audioGrey{
+    white-space: 90%;
+    height: 7px;
+    background-color: grey;
+    border-radius: 1rem;
+}
+
+.audioWhite{
+    width: 20%;
+    height: 7px;
+    background-color: white;
+    border-radius: 1rem;
+    position: relative;
+    bottom: 0.4rem;
+}
+
+
