--- a/style.css
+++ b/style.css
@@ -377,10 +377,12 @@ footer{
     width: 100%;
     height: 100%;
     display: flex;
+    justify-content: space-around;
 }
 
 .footerLeft{
     width: 30%;
+    max-width: 170px;
     height:100%;
     display: flex;
     align-items: center;
@@ -393,17 +395,16 @@ footer{
 .footerCenter{
     width: 40%;
     height: 100%;
-    background-color: blueviolet;
 }
 
 .footerRight{
     width: 30%;
     height: 100%;
-    background-color: red;
     display: flex;
     align-items: center;
     color: white;
     padding: 10px;
+    border: 1px solid white;
 }
 
 .songImg{
@@ -417,7 +418,7 @@ footer{
 }
 
 .songName{
-    width: 60%;
+    width: 50%;
     border: 1px solid white;
 }
 
@@ -493,9 +494,10 @@ footer{
     height: 7px;
     background-color: grey;
     border-radius: 1rem;
+    margin-top: 0.1rem;
 }
 
-.footerRight > .fa-solid{
+.footerRight  .fa-solid{
     padding: 0.3rem;
 }
 
@@ -510,6 +512,8 @@ footer{
 
 .optionAudio{
     width: 40%;
+    display: flex;
+    margin-right: 0.8rem;
 }
 
 .audio{
@@ -521,6 +525,7 @@ footer{
     height: 7px;
     background-color: grey;
     border-radius: 1rem;
+    margin-top: 0.4rem;
 }
 
 .audioWhite{
