--- a/style.css
+++ b/style.css
@@ -387,8 +387,6 @@ footer{
     align-items: center;
     justify-content: center;
     padding-left: 10px;
-
-    border: 1px solid white;
 }
 
 .footerCenter{
@@ -403,12 +401,10 @@ footer{
     align-items: center;
     color: white;
     padding: 10px;
-    border: 1px solid white;
 }
 
 .songImg{
     width: 30%;
-    border: 1px solid white;
 }
 
 .songImg > img{
@@ -418,7 +414,6 @@ footer{
 
 .songName{
     width: 50%;
-    border: 1px solid white;
 }
 
 .songName > h4{
@@ -432,14 +427,12 @@ footer{
 
 .save{
     width: 10%;
-    border: 1px solid white;
     color: rgb(168, 164, 164);
 }
 
 .play{
     width: 100%;
     height: 50%;
-    border: 1px solid white;
     display: flex;
     color: white;
 }
@@ -447,13 +440,11 @@ footer{
 .time{
     width: 100%;
     height: 50%;
-    border: 1px solid white;
 }
 
 .boxPlay{
     width: 20%;
     height: 100%;
-    border: 1px solid white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -462,7 +453,6 @@ footer{
 .boxPlayBig{
     width: 30%;
     height: 100%;
-    border: 1px solid white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -472,7 +462,6 @@ footer{
 .time{
     width: 100%;
     height: 50%;
-    border: 1px solid white;
     display: flex;
     color: white;
     padding: 1rem;
@@ -546,6 +535,9 @@ footer{
     
     .footerRight{
         width: 30%;
+    }
+    .conteinerFood{
+        justify-content: space-between;
     }
 }
 
