--- a/style.css
+++ b/style.css
@@ -137,6 +137,14 @@ body{
     align-items: center;
 }
 
+span:hover{
+    color: white;
+}
+
+#buttonNone:hover{
+    background-color: white;
+}
+
 /* ##### CONTEINER RIGHT ##### */
 
 .conteinerRight{
@@ -211,6 +219,11 @@ header > button{
     border-radius: 1.8rem;
 }
 
+#callToAction:hover{
+    scale: 1.1;
+}
+
+
 @media screen and (max-width: 552px) {
     
     header{
@@ -264,6 +277,9 @@ nav{
     }
 }
 
+a:hover{
+    color: white;
+}
 
 /* ##### MAIN ##### */
 
@@ -430,6 +446,10 @@ footer{
     color: rgb(168, 164, 164);
 }
 
+.fa-heart:hover , .fa-folder:hover{
+    color: white;
+}
+
 .play{
     width: 100%;
     height: 50%;
@@ -527,6 +547,10 @@ footer{
     margin-left: 0.8rem;
 }
 
+.boxPlayBig:hover{
+    scale: 1.2;
+}
+
 @media screen and (max-width: 552px) {
     
     .footerLeft{
@@ -557,6 +581,14 @@ footer{
 
     .conteinerFood{
         justify-content: space-between;
+    }
+
+    .audioGrey{
+        margin-left: 0rem;
+    }
+    
+    .audioWhite{
+        margin-left: 0rem;
     }
 
 }
