--- a/style.css
+++ b/style.css
@@ -285,8 +285,6 @@ a:hover{
 
 main{
     width: 100%;
-    /* padding-top: 90px; */
-    /* height: 100%; */
     }
 
 .flexWrap{
@@ -321,6 +319,7 @@ main{
 
 .picFilm{
     width: 100%;
+    position: relative;
 }
 
 .picFilm > img{
@@ -359,6 +358,24 @@ main{
     color: white;
     padding: 0.3rem;
     font-size: 1rem;
+}
+/* QUI SISTEMARE HOVER */
+.hoverPlay > .fa-circle-play{
+    font-size: 10rem;
+    color: white;
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+}
+
+.cardHover:hover{
+    filter: opacity(30%)
+}
+
+.hoverPlay .cardHover:hover {
+    display: block;
 }
 
 
