--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body{
     width: 100%;
     height: 100%;
     line-height: 2.2rem;
+    overflow-y: auto;
  }
 
 .playlist > h3{
@@ -208,6 +209,7 @@ header{
     align-items: center;
     padding-right: 1.3rem;
     position: fixed;
+    z-index: 100;
  }
 
 header > button{
@@ -277,8 +279,19 @@ nav{
     }
 }
 
+.lineGreen{
+    width: 30px;
+    margin: 0 auto;
+    border-color: green;
+    display: none;
+}
+
 a:hover{
     color: white;
+}
+
+.boxNav:hover .lineGreen{
+    display: block;
 }
 
 /* ##### MAIN ##### */
