--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 
 body{
     font-family: 'Montserrat', sans-serif;
+    background-color: black; 
+    /* verificare */
 }
 
 
@@ -91,8 +93,13 @@ body{
 /* INSTALL */
 
 .install{
-    width: 100%;
+    width: calc(100% -  (100% - 210px));
     padding: 0.5rem 1.2rem;
+    background-color: black;
+
+    position: fixed;
+    bottom: 91px;
+    z-index: 60;
 }
 
 .install  img{
@@ -209,7 +216,7 @@ header{
     align-items: center;
     padding-right: 1.3rem;
     position: fixed;
-    z-index: 100;
+    z-index: 90;
  }
 
 header > button{
@@ -372,7 +379,7 @@ main{
     padding: 0.3rem;
     font-size: 1rem;
 }
-/* QUI SISTEMARE fontsize hover */
+
 .hoverPlay > .fa-circle-play{
     font-size: 7vw;
     color: white;
@@ -415,6 +422,7 @@ footer{
     width: 100%;
     height: 90px;
     background-color: #282828;
+    z-index: 100;
     position: fixed;
     bottom: 0;
 }
